Update delete user from team  and delete team endpoints, swagger
