# src/api/v1/admin/teams/index.js
@@ -6,6 +6,6 @@ router.post('/', teamsController.createTeam);
 router.get('/:id', teamsController.getTeamById);
 router.post('/:id', teamsController.addUserToTeam);
 router.patch('/:id', teamsController.updateTeam);
-router.delete('/:userId', teamsController.removeUserFromTeam);
+router.delete('/users/:id', teamsController.removeUserFromTeam);
 
 module.exports = router;
